syntax = "proto3";

option csharp_namespace = "PlatformService";

service GrpcPlatform {
    rpc GetAllPlatforms (GetAllRequest) returns (PlatformResponse);
}

message GetAllRequest {}

message GrpcPlatformsModel{
    int32 platformId = 1;
    string name = 2;
    string publisher = 3;
}

message PlatformResponse {
    repeated GrpcPlatformsModel platform = 1;
}